src/snapshots/purring__parser__tests__empty_string.snap
---
source: src/parser.rs
expression: "p_header(\"\")"
---
Unexpected(Span { lo: 0, hi: 0, fi: 0 }, None, "T::Lower(\"module\")")
