src/snapshots/purring__parser__tests__everything_header.snap
---
source: src/parser.rs
expression: "p_header(r#\"\nmodule A.B.C (a, class B, C, D(..), E(F, G), \n (+), type (+), module H) where\n\nimport A as A\nimport A.B.C as A.C\nimport A.B.C (a, class B, \n C, D(..), E(F, G), (+), type (+))\nimport A.B.C hiding (foo)\n        \"#)"
---
Header
 QProperName
  8..12
    Qual
    Qual
  ProperName
   12..13
  Export::Value
   Name
    15..16
  Export::Class
   ProperName
    24..25
  Export::Typ
   ProperName
    27..28
  Export::TypDat
   ProperName
    30..31
   DataMember::All
  Export::TypDat
   ProperName
    37..38
   DataMember::Some
     ProperName
      39..40
     ProperName
      42..43
  Export::Symbol
   Symbol
    49..50
  Export::TypSymbol
   Symbol
    59..60
  Export::Module
   QProperName
    70..70
    ProperName
     70..71
  Import::As
   QProperName
    87..87
    ProperName
     87..88
   QProperName
    92..92
    ProperName
     92..93
  Import::As
   QProperName
    101..105
      Qual
      Qual
    ProperName
     105..106
   QProperName
    110..112
      Qual
    ProperName
     112..113
  Import::Multiple
   QProperName
    121..125
      Qual
      Qual
    ProperName
     125..126
    ImportPiece::Value
     Name
      128..129
    ImportPiece::Class
     ProperName
      137..138
    ImportPiece::Typ
     ProperName
      142..143
    ImportPiece::TypDat
     ProperName
      145..146
     DataMember::All
    ImportPiece::TypDat
     ProperName
      152..153
     DataMember::Some
       ProperName
        154..155
       ProperName
        157..158
    ImportPiece::Symbol
     Symbol
      162..163
    ImportPiece::TypSymbol
     Symbol
      172..173
  Import::Hiding
   QProperName
    183..187
      Qual
      Qual
    ProperName
     187..188
    ImportPiece::Value
     Name
      197..200
