src/snapshots/purring__parser__tests__expr_ado_b.snap
---
source: src/parser.rs
expression: "p_expr(r\" ado\n                    a <- f 2\n                    in a\n            \")"
---
9 of 11
===
Expr::Ado
 NULL
  DoStmt::Stmt
   Binder::Var
    Name
     25..26
   Expr::App
    Expr::Ident
     QName
      NULL
      Name
       30..31
    Expr::Number
     Number
      32..33
 Expr::Ident
  QName
   NULL
   Name
    57..58
===
