src/snapshots/purring__parser__tests__expr_case.snap
---
source: src/parser.rs
expression: "p_expr(r\"\n        case 1 + 1 of\n            2 -> foo\n            3 | Just _ <- foo bar -> baz\n                    where\n                        baz = 3\n        \")"
---
33 of 33
===
Module
 Header
  QProperName
   NULL
   ProperName
    7..11
  Decl::Def
   Name
    19..20
   GuardedExpr::Unconditional
    Expr::Case
     32..36
      Expr::Op
       Expr::Number
        Number
         37..38
       QOp
        NULL
        Op
         39..40
       Expr::Number
        Number
         41..42
      CaseBranch
        Binder::Number
         Number
          58..59
       GuardedExpr::Unconditional
        Expr::Ident
         QName
          NULL
          Name
           63..66
      CaseBranch
        Binder::Number
         Number
          79..80
       GuardedExpr::Guarded
         (
           Guard::Binder
            Binder::App
             Binder::Constructor
              QProperName
               NULL
               ProperName
                83..87
             Binder::Wildcard
              88..89
            Expr::App
             Expr::Ident
              QName
               NULL
               Name
                93..96
             Expr::Ident
              QName
               NULL
               Name
                97..100
          Expr::Where
           128..133
           Expr::Ident
            QName
             NULL
             Name
              104..107
            LetBinding::Pattern
             Binder::Var
              Name
               158..161
             Expr::Number
              Number
               164..165
         )
===
