src/snapshots/purring__parser__tests__expr_do.snap
---
source: src/parser.rs
expression: "p_expr(r\"\n        do\n            a <- f 2\n            b <- g a\n            fazz 1 2\n            let \n                a = 1\n            pure (b + a)\n        \")"
---
38 of 38
===
Module
 Header
  QProperName
   NULL
   ProperName
    7..11
  Decl::Def
   Name
    19..20
   GuardedExpr::Unconditional
    Expr::Do
     NULL
      DoStmt::Stmt
       Binder::Var
        Name
         47..48
       Expr::App
        Expr::Ident
         QName
          NULL
          Name
           52..53
        Expr::Number
         Number
          54..55
      DoStmt::Stmt
       Binder::Var
        Name
         68..69
       Expr::App
        Expr::Ident
         QName
          NULL
          Name
           73..74
        Expr::Ident
         QName
          NULL
          Name
           75..76
      DoStmt::Stmt
       NULL
       Expr::App
        Expr::App
         Expr::Ident
          QName
           NULL
           Name
            89..93
         Expr::Number
          Number
           94..95
        Expr::Number
         Number
          96..97
      DoStmt::Let
        LetBinding::Pattern
         Binder::Var
          Name
           131..132
         Expr::Number
          Number
           135..136
      DoStmt::Stmt
       NULL
       Expr::App
        Expr::Ident
         QName
          NULL
          Name
           149..153
        Expr::Paren
         Expr::Op
          Expr::Ident
           QName
            NULL
            Name
             155..156
          QOp
           NULL
           Op
            157..158
          Expr::Ident
           QName
            NULL
            Name
             159..160
===
