src/snapshots/purring__parser__tests__expr_if.snap
---
source: src/parser.rs
expression: "p_expr(\"if a == 2 then b else c\")"
---
16 of 16
===
Module
 Header
  QProperName
   NULL
   ProperName
    7..11
  Decl::Def
   Name
    19..20
   GuardedExpr::Unconditional
    Expr::IfThenElse
     23..25
     Expr::Op
      Expr::Ident
       QName
        NULL
        Name
         26..27
      QOp
       NULL
       Op
        28..30
      Expr::Number
       Number
        31..32
     Expr::Ident
      QName
       NULL
       Name
        38..39
     Expr::Ident
      QName
       NULL
       Name
        45..46
===
