src/snapshots/purring__parser__tests__expr_let.snap
---
source: src/parser.rs
expression: "p_expr(r\"\n            let\n                x = 1\n            in 2\n    \")"
---
15 of 15
===
Module
 Header
  QProperName
   NULL
   ProperName
    7..11
  Decl::Def
   Name
    19..20
   GuardedExpr::Unconditional
    Expr::Let
     36..39
      LetBinding::Pattern
       Binder::Var
        Name
         56..57
       Expr::Number
        Number
         60..61
     Expr::Number
      Number
       77..78
===
