src/snapshots/purring__parser__tests__expr_let_inline.snap
---
source: src/parser.rs
expression: "p_expr(r\"let x = 1 in 2\")"
---
8 of 8
===
Expr::Let
 0..3
  LetBinding::Pattern
   Binder::Var
    Name
     4..5
   Expr::Number
    Number
     8..9
 Expr::Number
  Number
   13..14
===
