src/snapshots/purring__parser__tests__expr_let_multiple.snap
---
source: src/parser.rs
expression: "p_expr(r\"\n            let\n                x = 1\n                x = 1\n                x = 1\n            in 2\n    \")"
---
24 of 24
===
Module
 Header
  QProperName
   NULL
   ProperName
    7..11
  Decl::Def
   Name
    19..20
   GuardedExpr::Unconditional
    Expr::Let
     36..39
      LetBinding::Pattern
       Binder::Var
        Name
         56..57
       Expr::Number
        Number
         60..61
      LetBinding::Pattern
       Binder::Var
        Name
         78..79
       Expr::Number
        Number
         82..83
      LetBinding::Pattern
       Binder::Var
        Name
         100..101
       Expr::Number
        Number
         104..105
     Expr::Number
      Number
       121..122
===
