src/snapshots/purring__parser__tests__expr_messy.snap
---
source: src/parser.rs
expression: "p_expr(\"(1 + 1) * 2 + foo @A `a + b` A.B.C.d A.B.+ q :: Int\")"
---
31 of 31
===
Module
 Header
  QProperName
   NULL
   ProperName
    7..11
  Decl::Def
   Name
    19..20
   GuardedExpr::Unconditional
    Expr::Typed
     Expr::Op
      Expr::Paren
       Expr::Op
        Expr::Number
         Number
          24..25
        QOp
         NULL
         Op
          26..27
        Expr::Number
         Number
          28..29
      QOp
       NULL
       Op
        31..32
      Expr::Op
       Expr::Number
        Number
         33..34
       QOp
        NULL
        Op
         35..36
       Expr::Op
        Expr::Infix
         Expr::Vta
          Expr::Ident
           QName
            NULL
            Name
             37..40
          Typ::Constructor
           QProperName
            NULL
            ProperName
             42..43
         Expr::Op
          Expr::Ident
           QName
            NULL
            Name
             45..46
          QOp
           NULL
           Op
            47..48
          Expr::Ident
           QName
            NULL
            Name
             49..50
         Expr::Ident
          QName
           Qual
            52..58
           Name
            58..59
        QOp
         Qual
          60..64
         Op
          64..65
        Expr::Ident
         QName
          NULL
          Name
           66..67
     Typ::Constructor
      QProperName
       NULL
       ProperName
        71..74
===
