src/snapshots/purring__parser__tests__expr_record.snap
---
source: src/parser.rs
expression: "p_expr(\"{ a, b: 1 }\")"
---
14 of 14
===
Module
 Header
  QProperName
   NULL
   ProperName
    7..11
  Decl::Def
   Name
    19..20
   GuardedExpr::Unconditional
    Expr::Record
     23..24
      RecordLabelExpr::Pun
       Name
        25..26
      RecordLabelExpr::Field
       Label
        28..29
       Expr::Number
        Number
         31..32
     33..34
===
